<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/ic_design_services"
        android:title="@string/drawer_menu_home" />

    <item
        android:id="@+id/menuPlugins"
        android:checkable="true"
        android:icon="@drawable/ic_extension"
        android:title="@string/drawer_menu_plugins" />

    <item
        android:id="@+id/menuAbout"
        android:checkable="true"
        android:icon="@drawable/ic_info"
        android:title="@string/drawer_menu_about" />

    <item
        android:id="@+id/menuSettings"
        android:checkable="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/drawer_menu_settings" />
</menu>