<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingStart="16dp"
  android:paddingTop="12dp"
  android:paddingEnd="16dp">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/outlinedTextField"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:hint="@string/new_project_app_name">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/app_name" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/outlinedTextField2"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:hint="@string/new_project_package_name">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/app_package" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/outlinedTextField3"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:hint="@string/new_project_min_sdk">

    <AutoCompleteTextView
      android:id="@+id/min_sdk"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="none" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/outlinedTextField4"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:hint="@string/new_project_target_sdk">

    <AutoCompleteTextView
      android:id="@+id/target_sdk"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="none" />

  </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>